# pydantic-ai-gateway

./: .gitignore  .pre-commit-config.yaml  .prettierignore  CLAUDE.md  Makefile  README.md  biome.jsonc  config.py  docker-compose.yml  eslint.config.mjs  package-lock.json  package.json  pyproject.toml  tsconfig.json
.github/workflows/: ci.yml  publish.yml
.zed/: settings.json
deploy/: README.md  check_config.sh  ensure_config.sh  example.config.ts  example.env.local  generate_api_key.js  limits-schema.sql  package.json  test.config.ts  tsconfig.json  vitest.config.mts  wrangler.jsonc
deploy/src/: db.ts  index.ts  status.ts  types.d.ts  types.ts
deploy/test/: env.d.ts  index.spec.ts  index.spec.ts.snap  tsconfig.json  utils.ts
deploy/test/__snapshots__/: index.spec.ts.snap
examples/: ex_anthropic.py  ex_anthropic_bedrock.py  ex_anthropic_chat.py  ex_anthropic_files.py  ex_azure.py  ex_hf_nebius.py  ex_huggingface.py  ex_openai.py  ex_ovhcloud.py  ex_pydantic_ai.py  pai_anthropic.py  pai_anthropic_bedrock.py  pai_anthropic_builtin.py  pai_anthropic_otel.py  pai_anthropic_stream.py  pai_anthropic_vertex.py  pai_bedrock.py  pai_google.py  pai_google_stream.py  pai_google_stream_image.py  pai_groq.py  pai_huggingface.py  pai_openai.py  pai_openai_responses.py  pai_openai_stream.py  pai_ovhcloud.py  pyproject.toml
gateway/: eslint.config.mjs  generate-genai-types.ts  limits-schema.sql  package.json  tsconfig.json  vitest.config.mts
gateway/src/: auth.ts  db.ts  gateway.ts  handler.ts  index.ts  limiter.ts  otel.ts  otelAttributes.ts  rateLimiter.ts  refreshGenaiPrices.ts  types.ts  utils.ts
gateway/src/api/: anthropic.ts  base.ts  bedrock.ts  chat.ts  embeddings.ts  google.ts  harmony.ts  index.ts  responses.ts
gateway/src/cache/: adapter.d.ts  index.ts  kv.ts  redis.ts
gateway/src/middleware/: cache.ts  storage.ts
gateway/src/newProviders/: anthropic.ts  base.ts  bedrock.ts  google.ts  groq.ts  huggingface.ts  openai.ts  test.ts
gateway/src/otel/: attributes.ts  genai-input-messages.d.ts  genai-output-messages.d.ts  genai.d.ts  index.ts
gateway/src/providers/: anthropic.ts  azure.ts  base.ts  bedrock.ts  default.ts  groq.ts  huggingface.ts  index.ts  openai.ts  ovhcloud.ts  test.ts  utils.ts
gateway/src/streaming/: sse-accumulator.ts
gateway/test/: README.md  auth.spec.ts  cache.spec.ts  conftest.ts  db.ts  env.d.ts  gateway.spec.ts  gateway.spec.ts.snap  index.spec.ts  index.spec.ts.snap  otel.ts  polyfills.ts  rateLimiter.spec.ts  routing.spec.ts  setup.ts  tsconfig.json  worker.ts  wrangler.jsonc
gateway/test/providers/: anthropic.spec.ts  anthropic.spec.ts.snap  azure.spec.ts  azure.spec.ts.snap  bedrock.spec.ts  bedrock.spec.ts.snap  google.spec.ts  google.spec.ts.snap  groq.spec.ts  groq.spec.ts.snap  (+6 more)
oss-gateway/: package.json  tsconfig.json  vitest.config.mts  worker-configuration.d.ts  wrangler.jsonc
oss-gateway/src/: config.ts  db.ts  index.ts  types.ts
proxy-vcr/: README.md  pyproject.toml
proxy-vcr/proxy_vcr/: main.py
proxy-vcr/proxy_vcr/cassettes/: anthropic-19999fbce5075795898578e3a57ad7330c7b9ee6f6f98c73f2237d050257214f.yaml  anthropic-4c11824387b8f43920a23ef5196d9e437350f0b3c6708ef3212c1e50b52a9b35.yaml  anthropic-6f790aa5ed012c0702a8220c3507790e5636ee2f1c52e66e110d1dac712b2d63.yaml  anthropic-9752c34227c474614a0161c842bd67313be0932354998df27c07a1b9d8b29eaa.yaml  anthropic-anthropic-chat-completion.yaml  azure-358cc480d17298f1874d3260d806b8b282395bbbe5b44f1408bc0e6fe4625339.yaml  azure-9752c34227c474614a0161c842bd67313be0932354998df27c07a1b9d8b29eaa.yaml  azure-d3a027f470b4f1da6ffb9a81b8306a445928195e90737f13f6948226ba5cad49.yaml  bedrock-730cb860c2314477e9522a81cfc6a426d95100e670c17f661d05499461cf830c.yaml  bedrock-stream.yaml  google-vertex-03b921fc7bae301d6705dd3f2024d78197c03013d20951b1501353da6c5b31d9.yaml  google-vertex-3fc5cd750ad872a644781b8d4a149f2d8f685bbd2122866dcb4714cf6c38082c.yaml  google-vertex-7d8e53cf9446c947696efe48adcc8cca62ebff9f55f315b61c245369615ca92a.yaml  google-vertex-9fcf9b80bd8047b2bbc85458a37f5601f2b20bb5307b34cd0891bc6811df12b2.yaml  google-vertex-anthropic-client.yaml  google-vertex-fallback.yaml  google-vertex-google-vertex-anthropic-client.yaml  google-vertex-stream.yaml  groq-2f224a6a0ee54dbc66875193523cc7fb58b0600a5d409f2080a744ac07358e5f.yaml  groq-ba2f477133ec293f18d882d9fc5ac864036811ad9270ae2d5771e484d4b5a5c8.yaml  huggingface-52d99571f9ebd7cd3b8f121ce7e530b8a81c69ac7102240783df08722646a9b5.yaml  huggingface-9fbe02785650116bca3cd03a1e1ca204ff7623332b5e833b6f874c960ff851ad.yaml  openai-159ef69d00bcffdce018936eaf487cc1a5c8eb66b52fcb8fc7fe0c79e37c3baa.yaml  openai-281c234fea62893bcc6cf9938f48ce863c757e7d9339cd0badcab66d33ec5714.yaml  openai-3bc303f40e7bb2fd35f89381e2a0b1845c054b1f6879bc2daddf8f97bd89b60d.yaml  openai-4aa76245acbac6ffcef36851e34406fc9feeafb5264cc083cb1083a9c838e80c.yaml  openai-77d5759136cb2982b73adf57a010bc66d6ed83681bdf01439a369e81765faeef.yaml  openai-85c50c20d79a55446c8ee8cce3db8273f9e45df86a46af3b6a1ef014074413a8.yaml  openai-8e81918655d25d21e5f24751d9a09701f16b8aba0c9c1a241245b108a30fde76.yaml  openai-94748ba2f45b546b778e93a23f7383b111fa3b75552a1ad141a59bf64e6046cb.yaml  openai-9a8509cd0f73f89247e9c90cd6a287f535166ed3faf0ef79c821c9e7fa417531.yaml  openai-bb9af470db8a6f5d27e4bec9910973ab2560c553630e55f5dd956224b9fc39cd.yaml  openai-chat-completion.yaml  openai-e49ad150dd6581653dd61fbb73921b255ff9f19310f99aba15e749007fc8daaa.yaml  openai-fd2589389653eb8d00f2dec475e668144ac84c9ab6552fefa490c87ad778b5b0.yaml  openai-stream-options-stream-false.yaml  openai-stream-options.yaml  ovhcloud-609126312739635c073ae10c676394447aa6293d0a3603f0bde21421b4755962.yaml  ovhcloud-f26e09cef7944f1e39966048541224d04b62c1b912d3aaa60c42744dad8faf5a.yaml
(+3 files in other folders)
