[project]
name = "examples"
version = "0.1.0"
dependencies = [
    "boto3>=1.40.28",
    "devtools>=0.12.2",
    "logfire[httpx]>=4.3.3",
    "opentelemetry-instrumentation-botocore>=0.57b0",
    "pydantic-ai>=1.10.0",
    "types-boto3[bedrock-runtime]",
    "mypy-boto3-bedrock-runtime",
]

# Install pydantic ai from git
[tool.uv.sources]
# Please don't remove this line, it's useful to test branches.
pydantic-ai = { git = "https://github.com/pydantic/pydantic-ai.git", rev = '395cbe73' }

[tool.uv]
package = false
